# extern_mem_algo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_dependencies.sh  main.cpp
build_scripts/: install_arrow.sh  install_benchmark.sh  install_gtest.sh
cmake/: init_options.cmake  setup_arrow.cmake  setup_bench.cmake  setup_gtest.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/group_by/: CMakeLists.txt
src/engine/group_by/benchmarks/: example.cpp
src/engine/group_by/include/engine/group_by/: group_by.hpp
src/engine/group_by/src/: group_by.cpp
src/engine/group_by/test/: example.cpp
src/engine/join/: CMakeLists.txt
src/engine/join/benchmarks/: example.cpp
src/engine/join/include/engine/join/: join.hpp
src/engine/join/src/: join.cpp
src/engine/join/test/: example.cpp
src/engine/order_by/: CMakeLists.txt
src/engine/order_by/include/engine/order_by/: order_by.hpp
src/engine/order_by/src/: order_by.cpp
src/engine/order_by/test/: example.cpp
src/engine/sort/: CMakeLists.txt
src/engine/sort/benchmarks/: example.cpp
src/engine/sort/include/engine/sort/: sort.hpp
src/engine/sort/src/: sort.cpp
src/engine/sort/test/: example.cpp
